--- a/EvidencePojisteniWeb/Views/PojistnaUdalost/Delete.cshtml
+++ b/EvidencePojisteniWeb/Views/PojistnaUdalost/Delete.cshtml
@@ -1,75 +1,97 @@
 ﻿@model EvidencePojisteniWeb.Models.PojistnaUdalostModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Odstranění pojistné události";
 }
 
-<h1>Delete</h1>
+<div class="container">
+    <header class="p-2 border-bottom shadow-lg rounded-3">
+        <h3 class="d-flex align-items-center text-body-emphasis text-decoration-none">
+            @ViewData["Title"]
+        </h3>
+    </header>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>PojistnaUdalostModel</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PopisUdalosti)
+    <h3 class="text-danger text-center mt-2">
+        Opravdu si přejete odstranit tuto pojistnou událost?
+    </h3>
+
+    <dl class="row mt-5">
+        <dt class="col-sm-3">
+            @Html.DisplayNameFor(m => m.PopisUdalosti)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PopisUdalosti)
+        <dd class="col-sm-9">
+            @Html.DisplayFor(m => m.PopisUdalosti)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DatumUdalosti)
+
+        <dt class="col-sm-3">
+            @Html.DisplayNameFor(m => m.DatumUdalosti)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DatumUdalosti)
+        <dd class="col-sm-9">
+            @Html.DisplayFor(m => m.DatumUdalosti)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MistoUdalosti)
+
+        <dt class="col-sm-3">
+            @Html.DisplayNameFor(m => m.MistoUdalosti)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MistoUdalosti)
+        <dd class="col-sm-9">
+            @Html.DisplayFor(m => m.MistoUdalosti)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Skoda)
+
+        <dt class="col-sm-3">
+            @Html.DisplayNameFor(m => m.Skoda)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Skoda)
+        <dd class="col-sm-9">
+            @Html.DisplayFor(m => m.Skoda)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Vyreseno)
+
+        <dt class="col-sm-3">
+            @Html.DisplayNameFor(m => m.Vyreseno)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Vyreseno)
+        <dd class="col-sm-9">
+            @(Model.Vyreseno ? "Ano" : "Ne")
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Svedek)
+
+        <dt class="col-sm-3">
+            @Html.DisplayNameFor(m => m.Svedek)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Svedek)
+        <dd class="col-sm-9">
+            @Html.DisplayFor(m => m.Svedek)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AdresaSvedka)
+
+        <dt class="col-sm-3">
+            @Html.DisplayNameFor(m => m.AdresaSvedka)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AdresaSvedka)
+        <dd class="col-sm-9">
+            @Html.DisplayFor(m => m.AdresaSvedka)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Poznamka)
+
+        <dt class="col-sm-3">
+            @Html.DisplayNameFor(m => m.Poznamka)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Poznamka)
+        <dd class="col-sm-9">
+            @Html.DisplayFor(m => m.Poznamka)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Pojisteni)
+
+        <dt class="col-sm-3">
+            Typ pojištění
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Pojisteni.PredmetPojisteni)
+        <dd class="col-sm-9">
+            @Model.Pojisteni?.PredmetPojisteni
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+
+        <input type="submit"
+               value="Odstranit"
+               class="btn btn-lg btn-danger" />
+
+        <div class="mt-5">
+            <a class="btn btn-outline-secondary"
+               asp-action="Index">
+                Zpět na přehled
+            </a>
+        </div>
     </form>
 </div>
