--- a/EvidencePojisteniWeb/Areas/Identity/Pages/_LoginPartial.cshtml
+++ b/EvidencePojisteniWeb/Areas/Identity/Pages/_LoginPartial.cshtml
@@ -20,13 +20,16 @@
     {
         <li class="nav-item ">
             <a class="nav-link text-light @(ViewContext.RouteData.Values["page"]?.ToString()
-                         ==
-                       "/Account/Register" ? "active fw-bold" : "")" asp-area="Identity" asp-page="/Account/Register">Registrace</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-light @(ViewContext.RouteData.Values["page"]?.ToString()
-                     ==
-                   "/Account/Login" ? "active fw-bold" : "")" asp-area="Identity" asp-page="/Account/Login">Přihlásit se</a>
-    </li>
-        }
+                    ==
+                "/Account/Register" ? "active fw-bold" : "")" asp-area="Identity" asp-page="/Account/Register">Registrace
+            </a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link text-light @(ViewContext.RouteData.Values["page"]?.ToString()
+                    ==
+                 "/Account/Login" ? "active fw-bold" : "")" asp-area="Identity" asp-page="/Account/Login">Přihlásit se
+            </a>
+        </li>
+    }
 </ul>
